MB-6991 Don't resume TAP producer in case of shutdown

If the engine is supposed to shut down, we don't need to resume
any TAP producers that were temporarily suspended. Otherwise,
there could be a race condition between TAP producer removal
and resume tasks, which causes memory reference errors.

Change-Id: I1a92487ae90935ae20921b519c1dcbfcc2e3ce5e
Reviewed-on: http://review.couchbase.org/21887
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Reviewed-by: Jin Lim <jin@couchbase.com>