src/tapconnection.cc
@@ -772,6 +772,9 @@ public:
     }
 
     bool callback(Dispatcher &, TaskId &) {
+        if (engine.isShutdownMode()) {
+            return false;
+        }
         connection.setSuspended(false);
         // The notify io thread will pick up this connection and resume it
         // Since we was suspended I guess we can wait a little bit
